# COP290-Rust

./: .gitignore  README.md
.github/workflows/: rust.yml
rustlab/: Cargo.toml  Makefile  README.md  tarpaulin-report.html
rustlab/cli/: Cargo.toml
rustlab/cli/src/: main.rs
rustlab/cli/tests/: cell_test.rs  display_test.rs  parser_test.rs
rustlab/client/: Cargo.toml  index.html
rustlab/client/src/: lib.rs  main.rs
rustlab/crdt/: Cargo.toml
rustlab/crdt/src/: lib.rs
rustlab/docs/: main.run.xml  main.tex  references.bib
rustlab/docs/content/: crdtapp.tex  images.tex  tuiext.tex  webapp.tex
rustlab/docs/tau-class/: tau.cls  taubabel.sty
rustlab/dummy_server/: Cargo.toml  function.rs  main.rs
rustlab/dummy_server/src/: graph.rs  handlers.rs  main.rs  operations.rs  server_models.rs  types.rs
rustlab/frontend/: Cargo.toml  index.html
rustlab/frontend/src/: cell_component.rs  context.rs  main.rs  main_copy.rs  models.rs  request_form.rs  row_component.rs  table_component.rs
rustlab/server/: Cargo.toml
rustlab/server/src/: .env  lib.rs  main.rs  spreadsheet.rs
rustlab/sheet/: Cargo.toml
rustlab/sheet/src/: display.rs  display_ext.rs  function.rs  function_ext.rs  graph.rs  graph_ext.rs  lib.rs  main  main.rs  parser.rs  parser_ext.rs  util.rs  util_ext.rs
rustlab/sheet/tests/: display_ext_tests.rs  display_test.rs  display_tests.rs  function_ext_tests.rs  function_tests.rs  graph_ext_tests.rs  graph_recalc_tests.rs  graph_test.rs  grid_test.rs  parser_ext_tests.rs  parser_test.rs  parser_tests.rs  util_test.rs  utils_ext_tests.rs
rustlab/src/: display.rs  function.rs  graph.rs  main.rs  parser.rs  util.rs
rustlab/wasm-frontend/: Cargo.toml
rustlab/wasm-frontend/src/: lib.rs
rustlab/ws_client/: Cargo.toml  index.html
rustlab/ws_client/src/: lib.rs
