[package]
name = "dummy_server"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
sheet = { path = "../sheet" }
tokio = { version = "=1.44.2", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["cors"] }

