[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
sheet = { path = "../sheet" }
wasm-bindgen = "0.2.67"
serde_json = "1"
serde = {version = "=1.0.219", features = ["derive"] }
anyhow = "1"
yew-router = "0.18.0"
wasm-bindgen-futures = "0.4.50"
gloo = "0.11.0"

[features]
default = []
web = []  

