[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
# Remove the sheet dependency if you're using local models
# sheet = { path = "../sheet" }
wasm-bindgen = "0.2.67"
serde_json = "1"
serde = {version = "=1.0.219", features = ["derive"] }
anyhow = "1"
yew-router = "0.18.0"
wasm-bindgen-futures = "0.4.50"
gloo = "0.11.0"
console_error_panic_hook = "0.1.7"

[features]
default = []
web = []