[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
sheet = { path = "../sheet" }
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2.67"
serde_json = "1"
serde = { version = "=1.0.219", features = ["derive"] }
anyhow = "1"
yew-router = "0.18.0"
wasm-bindgen-futures = "0.4.50"
gloo = "0.11.0"
console_error_panic_hook = "0.1.7"
web-sys = "0.3.77"
gloo-net = "0.6.0"
wasm-logger = "0.2.0"
log = "0.4.27"

[features]
default = []
web = []
