[package]
name = "sheet"
version = "0.1.0"
edition = "2021"

# Optional: if you want features
[features]
default = []
web = ["yew"]

[dependencies]
yew = { version = "0.21", optional = true, features = ["csr"] }
serde = {version = "=1.0.219", features = ["derive"] }
axum = "0.7"
tokio = "1.44.2"
tower-http = "0.6.2"
