[package]
name = "wasm-frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
bytecount = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }
operational-transform = { version = "0.6.0", features = ["serde"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
wasm-bindgen = "0.2"
js-sys = "0.3.51"